# SonicDeck

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  VERSION.md  codecov.yml  index.html  package.json  tailwind.config.js  tsconfig.node.json  version.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: claude-code-review.yml  frontend.yml  release.yml  rust.yml  tests.yml
.husky/: pre-commit
.planning/: ISSUES.md  ROADMAP.md  STATE.md
.planning/phases/01-test-coverage/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-vb-cable-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md
.planning/phases/03-audio-core-polish/: 03-02-SUMMARY.md  03-04-SUMMARY.md  03-05-SUMMARY.md  03-06-SUMMARY.md
.planning/phases/04-auto-updater/: 04-01-SUMMARY.md  04-02-SUMMARY.md  04-03-SUMMARY.md
docs/: TESTING_GUIDE_DE.html  TESTING_GUIDE_EN.html
docs/testing/: TESTING_GUIDE_DE.html  TESTING_GUIDE_EN.html
scripts/: sync-version.js
src/: App.tsx  constants.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: hotkeys.rs  lib.rs  main.rs  persistence.rs  settings.rs  sounds.rs  state.rs  tray.rs
src-tauri/src/audio/: cache.rs  decode.rs  device.rs  error.rs  manager.rs  mod.rs  playback.rs  waveform.rs
src-tauri/src/commands/: audio.rs  hotkeys.rs  logs.rs  mod.rs  settings.rs  sounds.rs  vbcable.rs
src-tauri/src/vbcable/: default_device.rs  detection.rs  installer.rs  microphone.rs  mod.rs
src-tauri/tests/: audio_decode.rs
src-tauri/tests/fixtures/: test_stereo.m4a
src/components/: CategoryTabs.tsx  Dashboard.tsx  Settings.tsx  SoundButton.tsx  SoundModal.tsx
src/components/audio/: FullWaveform.tsx  MiniWaveform.tsx
src/components/categories/: CategoryTabs.tsx
src/components/common/: EmojiPicker.tsx  ErrorBoundary.tsx  Toast.tsx
src/components/dashboard/: Dashboard.tsx  DashboardHeader.tsx  DashboardSoundGrid.tsx  SoundButton.tsx
src/components/modals/: HotkeyManager.tsx  SoundModal.tsx  TrimEditor.tsx  UpdateModal.test.tsx  UpdateModal.tsx
src/components/settings/: AudioDeviceSettings.tsx  PlaybackSettings.tsx  Settings.tsx  SettingsAbout.tsx  SystemTraySettings.tsx  VbCableSettings.test.tsx  VbCableSettings.tsx
src/contexts/: AudioContext.tsx  SettingsContext.tsx  SoundLibraryContext.tsx
src/hooks/: useAudioPlayback.test.ts  useAudioPlayback.ts  useFileDrop.test.ts  useFileDrop.ts  useHotkeyMappings.test.ts  useHotkeyMappings.ts  useUpdateCheck.test.ts  useUpdateCheck.ts
src/test/: setup.ts
src/utils/: hotkeyDisplay.test.ts  waveformQueue.test.ts
