[package]
name = "sonicdeck"
version = "0.1.0"
description = "High-performance Desktop Soundboard with Dual-Output Routing"
authors = ["SonicDeck Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Audio dependencies
cpal = "0.15"
# Symphonia for audio decoding (MP3, WAV, OGG support)
symphonia = { version = "0.5", features = ["mp3", "isomp4", "vorbis"] }
tauri-plugin-dialog = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
