[package]
name = "sonic-deck"
version = "0.8.1-0"
description = "High-performance Desktop Soundboard with Dual-Output Routing"
authors = ["Sonic Deck Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-autostart = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Audio dependencies
cpal = "0.15"
lru = "0.12"
# Symphonia for audio decoding (MP3, WAV, OGG support)
symphonia = { version = "0.5", features = ["mp3", "isomp4", "vorbis"] }
tauri-plugin-dialog = "2.0"

# Logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
