[package]
name = "sonic-deck"
version = "0.8.1-0"
description = "High-performance Desktop Soundboard with Dual-Output Routing"
authors = ["Sonic Deck Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-autostart = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Audio dependencies
cpal = "0.15"
lru = "0.12"
# Symphonia for audio decoding (MP3, OGG/Vorbis, M4A/AAC support)
symphonia = { version = "0.5", features = ["mp3", "isomp4", "aac", "vorbis"] }
tauri-plugin-dialog = "2.0"

# Logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dirs = "5.0"

# VB-Cable integration dependencies
com-policy-config = "0.6"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "7.0"
open = "5.3"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
tempfile = "3.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
